<resources>
    <string name="app_name">Calculator</string>
    <string name="eight">8</string>
    <string name="dot2">.</string>
    <string name="four">4</string>
    <string name="dot1">.</string>
    <string name="one">1</string>
    <string name="B2">2</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="add">+</string>
    <string name="delete">DEL</string>
    <string name="nine">9</string>
    <string name="expression">0</string>
    <string name="result">0</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="equal">=</string>
    <string name="multiply">*</string>
    <string name="clear">CLR</string>
    <string name="six">6</string>
    <string name="zero">0</string>
    <string name="five">5</string>
</resources>