<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toTopOf="@+id/seven" />

    <Button
        android:id="@+id/B2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/B2"
        app:layout_constraintBottom_toBottomOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="@+id/one" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/dot2"
        app:layout_constraintEnd_toStartOf="@+id/B2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/B2"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/B2"
        app:layout_constraintTop_toTopOf="@+id/B2" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="@+id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toTopOf="@+id/three" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="@+id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toTopOf="@+id/six" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toTopOf="@+id/four" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="@+id/dot1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dot1"
        app:layout_constraintTop_toTopOf="@+id/dot1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/dot2"
        app:layout_constraintEnd_toStartOf="@+id/dot1"
        app:layout_constraintStart_toEndOf="@+id/dot2"
        app:layout_constraintTop_toTopOf="@+id/dot2" />

    <Button
        android:id="@+id/dot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dot1"
        app:layout_constraintBottom_toBottomOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toTopOf="@+id/zero"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dot2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/clear"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.51"
        tools:text="@string/percent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/percent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toTopOf="@+id/percent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/delete"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/expression"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:layoutDirection="ltr"
        android:text="@string/expression"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layoutDirection="rtl"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

</androidx.constraintlayout.widget.ConstraintLayout>